--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,11 +1,11 @@
 modLoader="javafml"
 loaderVersion="[4,)"
-license="All Rights Reserved"
+license="MIT License"
 
 [[mods]]
 modId="fluidcows"
-version="1.0.0"
-displayName="Fluid Cows"
+version="1.0.2"
+displayName="FluidCows(REBORN)"
 description='''Cows that produce registered fluids instead of milk.'''
 
 [[dependencies.fluidcows]]
